# scone-hunter

./: .env.example  .gitignore  AUTOMATION-PLAN.md  CLAUDE-JULES.md  README.md  auto_scan.py  check_sessions.py  claude_scan.py  discover.py  get_error.py  get_error2.py  harvest.py  hunt_targets.py  jules_batch_scan.py  jules_hunt.py  jules_mcp_client.py  jules_mcp_session_tags.json  jules_scan.py  pyproject.toml
scone_hunter/: __init__.py  analyzer.py  cli.py  config.py  deep_hunter.py  models.py  notifier.py  scanner.py
scone_hunter/aggregator/: __init__.py  extractor.py  notifier.py
scone_hunter/discovery/: __init__.py  aggregator.py  defillama.py  immunefi.py
