[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scone-hunter"
version = "0.1.0"
description = "AI-powered smart contract vulnerability scanner"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Kim Asplund" }
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "web3>=7.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
scone-hunter = "scone_hunter.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
